[package]
name = "rpi-plant-moisture"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
clap = { version = "4.5.23", features = ["derive"] }
hyper = { version = "1.5.2" }
i2cdev = "0.6.1"
lazy_static = "1.5.0"
prometheus = "0.13.4"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
